starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__trailing_commas_everywhere.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nstruct Point {\n    x: i64,\n    y: i64,\n}\n\nenum Shape {\n    Circle(i64,),\n    Rect {\n        w: i64,\n        h: i64,\n    },\n}\n\nabi MyAbi {\n    event Moved(x: i64, y: i64,);\n    fn poke(times: i64,);\n}\n\nfn add(a: i64, b: i64,) -> i64 {\n    let opt: Option<i64,> = Option::Some(a,);\n    let p = Point { x: a, y: b, };\n    match opt {\n        Option::Some(v,) => { v + p.x },\n        Option::None => { add(a, b,) },\n    }\n}\n\nutxo Foo {\n    main fn new() {\n        yield(MyAbi,);\n    }\n\n    impl MyAbi {\n        fn poke(times: i64) {}\n    }\n}\n"
---
T-Fn: add => i64
  T-Let: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64} ⊢ let opt: Option<i64> = Option::Some(a); ⇒ Option<i64>
    T-Call: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64} ⊢ Option::Some(a) ⇒ Option
      T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64} ⊢ Option::Some ⇒ fn(p0: t3) -> Option
      T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64} ⊢ a ⇒ i64
      Unify-Var: i64 ~ t3 => {i64/t3}
    Unify-Enum: Option<i64> ~ Option => {}
      Unify-Const: i64 ~ i64 => {}
  T-Let: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>} ⊢ let p = Point {
    x: a,
    y: b,
}; ⇒ Point
    T-StructLit: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>} ⊢ Point {
    x: a,
    y: b,
} ⇒ Point
      T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>} ⊢ a ⇒ i64
      Unify-Const: i64 ~ i64 => {}
      T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>} ⊢ b ⇒ i64
      Unify-Const: i64 ~ i64 => {}
  T-ReturnTail: match opt {
    Option::Some(v) => {
        v + p.x
    },
    Option::None => {
        add(a, b)
    },
} => i64
    T-Match: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point} ⊢ match opt {
    Option::Some(v) => {
        v + p.x
    },
    Option::None => {
        add(a, b)
    },
} ⇒ i64
      T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point} ⊢ opt ⇒ Option<i64>
      Unify-Enum: Option<i64> ~ Option => {i64/t0}
        Unify-Var: i64 ~ t0 => {i64/t0}
      T-Tail: v + p.x => i64
        T-Bin-Add: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point, v: i64} ⊢ v + p.x ⇒ i64
          T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point, v: i64} ⊢ v ⇒ i64
          T-FieldAccess: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point, v: i64} ⊢ p.x ⇒ i64
            T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point, v: i64} ⊢ p ⇒ Point
          Unify-Const: i64 ~ i64 => {}
      Unify-Enum: Option<i64> ~ Option => {}
        Unify-Const: i64 ~ i64 => {}
      T-Tail: add(a, b) => i64
        T-Call: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point} ⊢ add(a, b) ⇒ i64
          T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point} ⊢ add ⇒ fn(a: i64, b: i64) -> i64
          T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point} ⊢ a ⇒ i64
          Unify-Const: i64 ~ i64 => {}
          T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64, opt: Option<i64>, p: Point} ⊢ b ⇒ i64
          Unify-Const: i64 ~ i64 => {}
      Unify-Const: i64 ~ i64 => i64
    Unify-Const: i64 ~ i64 => {}

T-Utxo: Foo => 
  T-Fn: new => ()
    T-Expr: {add: fn(a: i64, b: i64) -> i64, new: fn() -> ()} ⊢ yield(MyAbi); ⇒ ()
  T-Fn: poke => ()
