starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unary_mismatch_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let bad = -true;\n}\n"
---
]8;;https://starstream.nightstream.dev/errors/E0005\E0005 (link)]8;;\

  x unary `-` expects type `i64` but found `bool`
   ,-[test.star:2:16]
 1 | fn test() {
 2 |     let bad = -true;
   :                ^^^^
 3 | }
   `----
